# soup

./: README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: chroma.sqlite3
src/: dependencies.py
src/agents/: __init__.py  llms.py  rag_assistant.py  tools.py
src/agents/tools/: __init__.py  search.py
src/app/: __init__.py  streamlit_app.py
src/app/components/: __init__.py  collection_card.py  collection_selector.py  confirm_delete_collection_dialog.py  create_collection_dialog.py  model_selector.py  sidebar.py
src/app/pages/: 1_home.py  2_chat.py  3_upload.py  4_collections.py
src/config/: __init__.py  settings.py
src/core/: __init__.py
src/core/abstracts/: __init__.py  loader.py  vector_store.py
src/core/entities/: __init__.py  collection.py  ingestion_result.py  llm_model_config.py
src/embeddings/: __init__.py  factory.py
src/loaders/: __init__.py  factory.py  pdf.py
src/persistence/: __init__.py
src/persistence/vector/: __init__.py  chroma.py
src/services/: __init__.py  chat_service.py  collection_service.py  ingestion_service.py
src/shared/: __init__.py  logger.py  text_splitter.py
